setup-scripts/04-istio/vps4-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: vps4-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*.vps4.cluster-1.de'
    port:
      name: http
      number: 80
      protocol: HTTP
  - hosts:
    - '*.vps4.cluster-1.de'
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      credentialName: wc-vps4-cluster-1-de-tls
      mode: SIMPLE
